--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "text_values = []\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scat', 'text': text_values}"
    ]
   },
   {
