--- a/index.ipynb
+++ b/index.ipynb
@@ -323,9 +323,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "bar",
+         "uid": "99e48df2-c933-11e9-87a2-f11fe53d06ad"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"cf49d4c5-a07a-492f-a896-ef6e13e3f9be\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cf49d4c5-a07a-492f-a896-ef6e13e3f9be\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"99e914ee-c933-11e9-87a2-f11fe53d06ad\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"cf49d4c5-a07a-492f-a896-ef6e13e3f9be\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cf49d4c5-a07a-492f-a896-ef6e13e3f9be\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"99e914ee-c933-11e9-87a2-f11fe53d06ad\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
