--- a/index.ipynb
+++ b/index.ipynb
@@ -293,9 +293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-17-ba3e6654035e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-ba3e6654035e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    text_values = ['Buenos Aires','Toronto','Pyeongchang]\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "text_values = ['Buenos Aires','Toronto','Pyeongchang]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
