Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -402,27 +402,55 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
-         "type": "scatter",
-         "uid": "d88aca8a-c933-11e9-87a2-f11fe53d06ad",
-         "x": [],
-         "y": []
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "4dc4e666-c937-11e9-87a2-f11fe53d06ad",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
         },
         {
-         "text": [],
-         "type": "scatter",
-         "uid": "d88acd50-c933-11e9-87a2-f11fe53d06ad",
-         "x": [],
-         "y": []
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "4dc4e8dc-c937-11e9-87a2-f11fe53d06ad",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           4758,
+           2731571,
+           3194
+          ]
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"9c33918f-10fd-4fd4-92d8-05938ad7ca05\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9c33918f-10fd-4fd4-92d8-05938ad7ca05\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"d89643ec-c933-11e9-87a2-f11fe53d06ad\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"d896468a-c933-11e9-87a2-f11fe53d06ad\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"710cb646-f64b-4f26-9ecc-149162e7702e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"710cb646-f64b-4f26-9ecc-149162e7702e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"4dcac112-c937-11e9-87a2-f11fe53d06ad\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"4dcac400-c937-11e9-87a2-f11fe53d06ad\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"9c33918f-10fd-4fd4-92d8-05938ad7ca05\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9c33918f-10fd-4fd4-92d8-05938ad7ca05\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"d89643ec-c933-11e9-87a2-f11fe53d06ad\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"d896468a-c933-11e9-87a2-f11fe53d06ad\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"710cb646-f64b-4f26-9ecc-149162e7702e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"710cb646-f64b-4f26-9ecc-149162e7702e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"4dcac112-c937-11e9-87a2-f11fe53d06ad\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"4dcac400-c937-11e9-87a2-f11fe53d06ad\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
