Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,20 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-28-624976aeff58>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-29-c53839f9e5fd>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-624976aeff58>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    text_values = ['Buenos Aires','Toronto','Pyeongchang]\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-c53839f9e5fd>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_pops = {'type': 'bar', 'text': text_values [\"label_1\", \"label_2\", \"label_3\"]}}\u001b[0m\n\u001b[0m                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "text_values = ['Buenos Aires','Toronto','Pyeongchang'\n",
+    "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values [\"label_1\", \"label_2\", \"label_3\"]}}"
    ]
   },
